--- a/src/App.css
+++ b/src/App.css
@@ -361,7 +361,7 @@ a{
     width: 85%; 
     line-height: 1.3;
   }
-  .p1 {
+  .p2 {
     font-size: 2vw;
     width: 85%; 
     line-height: 1.3;
@@ -385,8 +385,7 @@ a{
   
   .heading-nav {
     margin-top: 0 auto;
-    padding: 3rem; 
-    gap: 10px;
+    gap: 7px;
   }
   .case-study-image {
     width: 50%;
@@ -397,6 +396,16 @@ a{
   }
   .introHome{
     margin: 20px auto;
+  }
+  .p1 {
+    font-size: 4vw;
+    width: 85%; 
+    line-height: 1.3;
+  }
+  .p2 {
+    font-size: 3vw;
+    width: 85%; 
+    line-height: 1.3;
   }
 
 }
