--- a/src/App.css
+++ b/src/App.css
@@ -298,18 +298,19 @@ a{
 .case-study-page{
   display: flex;
   flex-direction: column; 
-  align-items: center; 
-  justify-content: center;
+  align-items: flex-start; 
+  justify-content: flex-start;
   width: 100%;
+  max-width: 900px;
   padding: 0; 
   margin: 0 auto; 
-  text-align: center; 
+  text-align: left; 
 }
 .case-study-page h1{
   color: #7AB574;
   font-family: 'Magilio', sans-serif;
   font-size: 6vw;
-  text-align: center;
+  text-align: left;
   margin-bottom: 0rem;
 
 }
@@ -317,18 +318,26 @@ a{
   color: #F45B69;
   font-family: 'Magilio', sans-serif;
   font-size: 4vw;
-  text-align: center;
+  text-align: left;
   margin-bottom: 1rem;
 }
 
-.case-study-page p{
+.case-study-page h3{
+  color: #F45B69;
+  font-family: 'Magilio', sans-serif;
+  font-size: 4vw;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+
+.case-study-page p,
+.case-study-page ul{
   color: #E6AF2E;
-  text-align: center;
   font-family: 'Magilio', sans-serif;
   font-size: 2vw; 
   margin: 20 auto; 
   padding: 0;
-  text-align: center; 
+  text-align: left; 
   width: 80%; 
   max-width: 800px; 
   line-height: 1.6; 
