--- a/src/App.css
+++ b/src/App.css
@@ -302,7 +302,7 @@ a{
   justify-content: flex-start;
   width: 100%;
   max-width: 900px;
-  padding: 40px 60px;
+  padding: 0;
   margin: 0 auto; 
   text-align: left; 
 }
@@ -312,12 +312,13 @@ a{
   font-size: 6vw;
   text-align: left;
   margin-bottom: 0rem;
+  padding: 40px 60px;
 
 }
 .case-study-page h2{
   color: #F45B69;
   font-family: 'Magilio', sans-serif;
-  font-size: 4vw;
+  font-size: 5vw;
   text-align: left;
   margin-bottom: 1rem;
 }
@@ -326,6 +327,14 @@ a{
   color: #F45B69;
   font-family: 'Magilio', sans-serif;
   font-size: 4vw;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+
+.case-study-page h4{
+  color: #F45B69;
+  font-family: 'Magilio', sans-serif;
+  font-size: 3vw;
   text-align: left;
   margin-bottom: 1rem;
 }
