--- a/src/App.css
+++ b/src/App.css
@@ -296,6 +296,7 @@ a{
 }
 
 .case-study-page{
+  background-color: #ffffff;
   display: flex;
   flex-direction: column; 
   align-items: flex-start; 
