--- a/src/App.css
+++ b/src/App.css
@@ -319,7 +319,7 @@ a{
   padding: 0px;
 }
 .case-study-page h1{
-  color: #7AB574;
+  color: #fa382a;
   font-family: 'Magilio', sans-serif;
   font-size: 6vw;
   text-align: center;
