--- a/src/App.css
+++ b/src/App.css
@@ -302,29 +302,20 @@ a{
   align-items: flex-start; 
   justify-content: flex-start;
   width: 100%;
-  max-width: 900px;
+  max-width: 1100px;
   padding: 0;
-  margin: 0 auto; 
-  text-align: left; 
+  padding: 40px;
 }
-.case-study-page hr{
-  width: 100vw; 
-  height: 60px;
-  margin: 20px auto;
-  background-image: url('/public/borderSquigglePinkLine.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  border-color: transparent;
-  padding: 0px;
+.case-study-text {
+  flex: 1;
+  text-align: left;
+  padding-right: 40px;
 }
 .case-study-page h1{
   color: #fa382a;
   font-family: 'Magilio', sans-serif;
   font-size: 6vw;
-  text-align: center;
-  margin-bottom: 0rem;
-  padding: 40px 60px;
+  margin-bottom: 10px;
 
 }
 .case-study-page h2{
