--- a/src/App.css
+++ b/src/App.css
@@ -296,7 +296,7 @@ a{
 }
 
 .case-study-page{
-  background-color: #ffffff;
+  background-color: #ffffff !important;
   display: flex;
   flex-direction: column; 
   align-items: flex-start; 
