--- a/src/App.css
+++ b/src/App.css
@@ -307,6 +307,7 @@ a{
   overflow-y: scroll;
   scroll-snap-type: y mandatory; 
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .case-study-section {
   display: flex;
@@ -319,6 +320,7 @@ a{
   padding: 5%;
   box-sizing: border-box;
   scroll-snap-align: start; 
+  overflow-x: hidden;
 }
 .case-study-header {
   display: flex;
@@ -336,21 +338,18 @@ a{
   flex-direction: column;
   justify-content: center;
   gap: 15px;
-  padding-right: 5%;
 }
 
 .case-study-text h1 {
   font-size: 3rem;
   font-weight: 700;
   color: #D64545; 
-  margin-bottom: 10px;
 }
 
 .case-study-text h2 {
   font-size: 1.8rem;
   font-weight: 600;
   color: #2276B8; 
-  margin-bottom: 20px;
 }
 
 .case-study-text p {
@@ -362,11 +361,12 @@ a{
   width: 50%;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .case-study-header-image img {
-  width: 100%;
-  max-width: 500px;
+  width: 100%; 
+  max-width: 600px;
   height: auto;
   object-fit: contain;
   border-radius: 10px;
