--- a/src/App.css
+++ b/src/App.css
@@ -360,17 +360,17 @@ a{
 .case-study-header-image {
   width: 50%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
 .case-study-header-image img {
   width: 100%; 
   max-width: 600px;
-  height: auto;
   max-height: 90vh;
-  object-fit: contain;
   border-radius: 10px;
+  height: 100vh;
+  object-fit: cover; 
 }
 
 .case-study-text .subtitle {
