--- a/src/App.css
+++ b/src/App.css
@@ -362,6 +362,8 @@ a{
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .case-study-header-image img {
