--- a/src/App.css
+++ b/src/App.css
@@ -297,10 +297,11 @@ a{
 
 .case-study-page {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  width: 100%;
-  min-height: 100vh;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
   background-color: white;
   padding: 0;
   box-sizing: border-box;
@@ -338,6 +339,8 @@ a{
   flex-direction: column;
   justify-content: center;
   gap: 15px;
+  padding-left: 5%;
+  padding-right: 3%;
 }
 
 .case-study-text h1 {
@@ -368,11 +371,9 @@ a{
 
 .case-study-header-image img {
   width: 100%; 
-  max-width: 600px;
-  max-height: 90vh;
-  border-radius: 10px;
-  height: 100vh;
-  object-fit: cover; 
+  height: 100%; 
+  max-height: 100vh;
+  object-fit: contain;
 }
 
 .case-study-text .subtitle {
