--- a/src/App.css
+++ b/src/App.css
@@ -303,9 +303,11 @@ a{
   width: 100vw;
   height: 100vh;
   background-color: white;
-  padding: 5%;
+  padding: 0;
   box-sizing: border-box;
-  overflow: hidden; 
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory; 
+  scroll-behavior: smooth;
   overflow-x: hidden;
 }
 .case-study-section {
@@ -370,7 +372,7 @@ a{
 .case-study-header-image img {
   width: 100%; 
   height: 100%; 
-  max-height: 100vh;
+  max-height: 100vh; /* Ensures it doesn’t overflow vertically */
   object-fit: contain;
 }
 
