--- a/src/App.css
+++ b/src/App.css
@@ -297,11 +297,10 @@ a{
 
 .case-study-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   background-color: white;
   padding: 0;
   box-sizing: border-box;
