--- a/src/App.css
+++ b/src/App.css
@@ -297,15 +297,17 @@ a{
 
 .case-study-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100%; /* Instead of fixed width */
-  height: 100vh; /* Full viewport height */
+  width: 100%;
+  min-height: 100vh;
   background-color: white;
-  padding: 5%;
+  padding: 0;
   box-sizing: border-box;
-  overflow: hidden; 
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory; 
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .case-study-section {
   display: flex;
@@ -360,17 +362,19 @@ a{
 .case-study-header-image {
   width: 50%;
   display: flex;
-  justify-content: flex-end; /* Align image to the right */
+  justify-content: center;
   align-items: center;
-  height: 100%; /* Keep full-page height */
-  overflow: hidden; /* Prevents any overflow */
+  height: 100vh;
+  overflow: hidden;
 }
 
 .case-study-header-image img {
-  width: 100%; /* Ensures it spans the full width */
-  height: 100vh; /* Keeps full-page height */
-  object-fit: contain; /* Ensures the whole image is visible */
-  max-height: 90vh; 
+  width: 100%; 
+  max-width: 600px;
+  max-height: 90vh;
+  border-radius: 10px;
+  height: 100vh;
+  object-fit: cover; 
 }
 
 .case-study-text .subtitle {
