--- a/src/App.css
+++ b/src/App.css
@@ -299,13 +299,13 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   background-color: white;
   padding: 0;
   box-sizing: border-box;
   overflow-y: scroll;
-  scroll-snap-type: y mandatory; 
+  scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
