--- a/src/App.css
+++ b/src/App.css
@@ -338,6 +338,7 @@ a{
   flex-direction: column;
   justify-content: center;
   gap: 15px;
+
 }
 
 .case-study-text h1 {
@@ -364,8 +365,8 @@ a{
 }
 
 .case-study-header-image img {
-  width: 100%; 
-  max-width: 600px; /* Limits image size for large screens */
+  width: 100%;
+  max-width: 500px;
   height: auto;
   object-fit: contain;
   border-radius: 10px;
