--- a/src/App.css
+++ b/src/App.css
@@ -15,18 +15,7 @@ body, html {
   overflow-x: hidden;
 }
 body::-webkit-scrollbar {
-  display: none;display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  background-color: white;
-  padding: 0;
-  box-sizing: border-box;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+  display: none;
 }
 
 .App {
@@ -316,22 +305,11 @@ a{
   padding: 0;
   box-sizing: border-box;
   overflow-y: scroll;
-  scroll-snap-type: y mandatory; 
+  scroll-snap-type: y mandatory; /* Enables snap scrolling */
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
-.case-study-section {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 100vh;
-  max-width: 1200px;
-  padding: 5%;
-  box-sizing: border-box;
-  scroll-snap-align: start; 
-  
+body.case-study-active {
+  background-color: white !important;
 }
 .case-study-header {
   display: flex;
