--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,18 @@ body, html {
   overflow-x: hidden;
 }
 body::-webkit-scrollbar {
-  display: none;
+  display: none;display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .App {
@@ -305,11 +316,22 @@ a{
   padding: 0;
   box-sizing: border-box;
   overflow-y: scroll;
-  scroll-snap-type: y mandatory; /* Enables snap scrolling */
+  scroll-snap-type: y mandatory; 
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-body.case-study-active {
-  background-color: white !important;
+.case-study-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+  max-width: 1200px;
+  padding: 5%;
+  box-sizing: border-box;
+  scroll-snap-align: start; 
+  
 }
 .case-study-header {
   display: flex;
