--- a/src/App.css
+++ b/src/App.css
@@ -15,18 +15,7 @@ body, html {
   overflow-x: hidden;
 }
 body::-webkit-scrollbar {
-  display: none;display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  background-color: white;
-  padding: 0;
-  box-sizing: border-box;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+  display: none;
 }
 
 .App {
