--- a/src/App.css
+++ b/src/App.css
@@ -297,15 +297,17 @@ a{
 
 .case-study-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100%; /* Instead of fixed width */
-  height: 100vh; /* Full viewport height */
+  width: 100%;
+  min-height: 100vh;
   background-color: white;
-  padding: 5%;
+  padding: 0;
   box-sizing: border-box;
-  overflow: hidden; 
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory; 
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 .case-study-section {
   display: flex;
