--- a/src/App.css
+++ b/src/App.css
@@ -297,10 +297,11 @@ a{
 
 .case-study-page {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  width: 100%;
-  min-height: 100vh;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
   background-color: white;
   padding: 0;
   box-sizing: border-box;
