--- a/src/App.css
+++ b/src/App.css
@@ -371,11 +371,9 @@ a{
 
 .case-study-header-image img {
   width: 100%; 
-  max-width: 600px;
-  max-height: 90vh;
-  border-radius: 10px;
-  height: 100vh;
-  object-fit: cover; 
+  height: 100%; 
+  max-height: 100vh; /* Ensures it doesn’t overflow vertically */
+  object-fit: contain;
 }
 
 .case-study-text .subtitle {
