Revert "Changed names"
This reverts commit 84527f51074e4663024368de7477867f0dbe4d7e.

--- a/src/App.css
+++ b/src/App.css
@@ -303,9 +303,11 @@ a{
   width: 100vw;
   height: 100vh;
   background-color: white;
-  padding: 5%;
+  padding: 0;
   box-sizing: border-box;
-  overflow: hidden; 
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory; 
+  scroll-behavior: smooth;
   overflow-x: hidden;
 }
 .case-study-section {
