--- a/src/App.css
+++ b/src/App.css
@@ -297,11 +297,10 @@ a{
 
 .case-study-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   background-color: white;
   padding: 0;
   box-sizing: border-box;
@@ -339,8 +338,6 @@ a{
   flex-direction: column;
   justify-content: center;
   gap: 15px;
-  padding-left: 5%;
-  padding-right: 3%;
 }
 
 .case-study-text h1 {
@@ -371,9 +368,11 @@ a{
 
 .case-study-header-image img {
   width: 100%; 
-  height: 100%; 
-  max-height: 100vh;
-  object-fit: contain;
+  max-width: 600px;
+  max-height: 90vh;
+  border-radius: 10px;
+  height: 100vh;
+  object-fit: cover; 
 }
 
 .case-study-text .subtitle {
