--- a/src/App.css
+++ b/src/App.css
@@ -338,6 +338,8 @@ a{
   flex-direction: column;
   justify-content: center;
   gap: 15px;
+  padding-left: 5%;
+  padding-right: 3%;
 }
 
 .case-study-text h1 {
@@ -360,17 +362,19 @@ a{
 .case-study-header-image {
   width: 50%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .case-study-header-image img {
   width: 100%; 
   max-width: 600px;
-  height: auto;
   max-height: 90vh;
-  object-fit: contain;
   border-radius: 10px;
+  height: 100vh;
+  object-fit: cover; 
 }
 
 .case-study-text .subtitle {
